(fix) added a background process to send email by bulk and added a route to return allusers
