# DOT-LMS-backend/storage/api-docs/api-docs.json
@@ -1842,6 +1842,20 @@
                 }
             }
         },
+        "/Users": {
+            "get": {
+                "tags": [
+                    "User Management Endpoints"
+                ],
+                "description": "Returns all the users in the system except for admins",
+                "operationId": "6018adc799c2ad6bd3a0854a5535e57b",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
         "/ConfigurePassword": {
             "post": {
                 "tags": [
@@ -2172,27 +2186,7 @@
             },
             "messages": {
                 "title": "messages",
-                "description": "Message data",
-                "properties": {
-                    "message_content": {
-                        "title": "message_content",
-                        "description": "The Message to be sent",
-                        "type": "string"
-                    },
-                    "message_reciever_id": {
-                        "title": "message_reciever_id",
-                        "description": "The user id of the reciever of the message",
-                        "type": "string",
-                        "example": "TCH-8734"
-                    },
-                    "message_sender_id": {
-                        "title": "message_sender_id",
-                        "description": "The user id of the sender of the message",
-                        "type": "string",
-                        "example": "TCH-5432"
-                    }
-                },
-                "type": "object"
+                "description": "Message data"
             }
         },
         "securitySchemes": {
